<resources>
    <string name="app_name">Project1</string>
    <string name="sign_up"><u>SIGNUP</u></string>
    <string name="sign_in"><u>SIGNIN</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">SIGNUP,</string>
    <string name="become_a_nike_member">Become a nike member.</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="stat_your_journey_nwith_nike">Start your journey \nwith LINK-TREE</string>
    <string name="join_us">Join Us</string>
    <string name="sing_in">Sing In</string>
    <string name="login_now">Login Now,</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="enter_card_holder_name">Enter Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="cvv">CVV</string>
    <string name="add_card">Add Card</string>
    <string name="more_payment_options">More Payment Options</string>
    <string name="cash">Cash</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="payment_method">Payment Method</string>
    <string name="are_you_sure_want_to_logout">are you sure want to logout</string>
    <string name="logout">logout</string>
    <string name="your_order_has_been_nplaced_successfully">Your order has been \nplaced successfully!</string>
    <string name="bag">Bag</string>
    <string name="summary">Summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="shipping_amp_handling"><![CDATA[Shipping & Handling]]></string>
    <string name="estimated_tax">Estimated Tax</string>
    <string name="order_total">Order Total</string>
    <string name="no_product_available">No Product Available</string>
    <string name="checkout">CHECKOUT</string>
    <string name="personal_information">Personal Information</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="enter_your_province">Enter your province</string>
    <string name="billing_information">Billing Information</string>
    <string name="place_order">PLACE ORDER</string>
</resources>